syntax = "proto3";

package todo.v1;

option go_package = "todo-service/gen/todo/v1;todov1";

service TodoService {
  rpc AddTask(AddTaskRequest) returns (AddTaskResponse) {}
  rpc GetTasks(GetTasksRequest) returns (GetTasksResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
}

message Task {
  string id = 1;
  string text = 2;
  bool completed = 3;
  string created_at = 4;
}

message AddTaskRequest {
  string text = 1;
}

message AddTaskResponse {
  Task task = 1;
}

message GetTasksRequest {}

message GetTasksResponse {
  repeated Task tasks = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}